--- a/public/css/reciept.css
+++ b/public/css/reciept.css
@@ -35,10 +35,17 @@
 }
 */
 
+.reciepts .header{
+    font-weight: bold;
+    cursor: pointer;
+    background-color: LightSlateGray;
+    padding: 5px;
+}
+
 .reciepts .reciept-data{
     font-weight: bold;
     cursor: pointer;
-    background-color: aqua;
+    background-color: LightSteelBlue;
     padding: 5px;
 }
 
@@ -57,6 +64,10 @@
     width: 150px;
 }
 
+.reciepts .reciept .printed{
+    width: 180px;
+}
+
 .reciept.active .costs{
     display: block;
 }
@@ -73,9 +84,7 @@
 .reciepts .reciept .costs .time{
     margin-right: 20px;
 }
-.reciepts .reciept .costs .delete/*,
-.reciepts .reciept .costs button.edit,
-.reciepts .reciept .costs button.save*/{
+.reciepts .reciept .costs .action{
     float: right;
     margin-right: 30px;
 }
